--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,9 +123,10 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardLogin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:backgroundTint="#fcfcfc"
             app:layout_constraintTop_toBottomOf="@+id/slantViewLoginHeader"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -360,22 +361,81 @@
                     android:textSize="@dimen/login_font_size" />-->
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:id="@+id/txtGuest"
-                android:fontFamily="@font/dubai_font"
-                android:text="@string/signin_as_guest"
-                android:textAlignment="center"
-                android:textColor="@color/textColor"
-                android:textSize="@dimen/login_font_size" />
+
 
 
             </LinearLayout>
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:id="@+id/layoutUae"
+                android:visibility="visible"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/layoutEnableUAEPass"
+                    android:layout_width="300dp"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal"
+                    android:visibility="visible"
+                    android:background="@drawable/rounded_edittext_boarder_bg"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:layout_gravity="center">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.25"
+                        android:id="@+id/txtLoginwith"
+                        android:paddingTop="8dp"
+                        android:layout_gravity="end|center_vertical"
+                        android:fontFamily="@font/dubai_font"
+                        android:text="@string/login_with"
+                        android:textAlignment="viewEnd"
+                        android:paddingEnd="2dp"
+                        android:visibility="visible"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/loginFontSize" />
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="44dp"
+                        android:padding="4dp"
+                        android:id="@+id/imgUAEPass"
+                        android:scaleType="fitXY"
+                        android:layout_gravity="center"
+                        android:src="@drawable/uaepass" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.25"
+                        android:paddingTop="8dp"
+                        android:id="@+id/txtUAEPass"
+                        android:layout_gravity="start|center_horizontal"
+                        android:fontFamily="@font/dubai_font"
+                        android:text="@string/with_uaepass"
+                        android:paddingStart="2dp"
+                        android:textAlignment="viewStart"
+                        android:visibility="visible"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/loginFontSize" />
+                </LinearLayout>
+                <TextView
+                    android:layout_width="300dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/rounded_edittext_maroon_bg"
+                    android:id="@+id/txtGuest"
+                    android:paddingTop="8dp"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/dubai_font"
+                    android:text="@string/signin_as_guest"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/login_font_size" />
+
+            </LinearLayout>
+            <!--<LinearLayout
                 android:id="@+id/layoutEnableUAEPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -408,9 +468,9 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:src="@drawable/uaepass" />
-            </LinearLayout>
+            </LinearLayout>-->
         </androidx.cardview.widget.CardView>
-        <LinearLayout
+        <!--<LinearLayout
             android:id="@+id/layoutUAEPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -443,7 +503,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/uaepass" />
-        </LinearLayout>
+        </LinearLayout>-->
 
         <!--<ProgressBar
             android:id="@+id/progressBar"
