--- a/app/src/main/res/drawable/maroon_border_bg.xml
+++ b/app/src/main/res/drawable/maroon_border_bg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="0dp"/>
+    <solid android:color="@color/maroon_light"/>
     <stroke android:width="1dp"
-        android:color="#efeeee"/>
+        android:color="@color/maroon_light"/>
 </shape>
