--- a/app/src/main/res/drawable/rounded_corners_bg.xml
+++ b/app/src/main/res/drawable/rounded_corners_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#efeeee"/>
-    <stroke android:width="3dp" android:color="#efeeee" />
-    <corners android:radius="3dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+    <solid android:color="#fcfcfc"/>
+    <stroke android:width="2dp" android:color="#F1F3F4" />
+    <corners android:radius="5dp"/>
+    <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
 </shape>
