--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,19 +106,26 @@
                     </LinearLayout>
 
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:id="@+id/layoutlastlogin"
+
+                    android:background="@color/maroon_dark">
                 <TextView
                     android:id="@+id/txtLastLogin"
                     style="@style/font_small_bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center_vertical"
+
                     android:layout_marginEnd="10dp"
                     android:layoutDirection="locale"
                     android:textAlignment="viewStart"
                     android:fontFamily="@font/dubai_font"
-                    android:text="@string/title_settings"
                     android:textColor="@color/white" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -130,6 +137,7 @@
                 android:id="@+id/ui_container"
                 android:layout_width="match_parent"
                 android:layoutDirection="locale"
+                android:background="@color/white"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/layoutProfile"
                 android:layout_marginBottom="60dp"/>
