--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -38,6 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/LBL_DATE_TIME"
+                    android:visibility="invisible"
 
                     android:textSize="14sp"
                     android:textAlignment="viewStart"
@@ -166,8 +167,8 @@
                             android:layout_gravity="start"
                             android:id="@+id/gotomap">
                             <ImageView
-                                android:layout_width="42dp"
-                                android:layout_height="42dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:fontFamily="@font/dubai_font"
                                 android:padding="5dp"
                                 android:layout_gravity="start"
@@ -182,8 +183,8 @@
                             android:layout_marginStart="5dp"
                             android:id="@+id/edit">
                             <ImageView
-                                android:layout_width="42dp"
-                                android:layout_height="42dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:fontFamily="@font/dubai_font"
                                 android:padding="5dp"
                                 android:src="@drawable/edit_512"/>
@@ -195,8 +196,8 @@
                             android:id="@+id/delete"
                             android:layout_marginStart="5dp">
                             <ImageView
-                                android:layout_width="42dp"
-                                android:layout_height="42dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:src="@drawable/delete_512"
                                 android:fontFamily="@font/dubai_font"
                                 android:padding="5dp"
@@ -209,8 +210,8 @@
                             android:id="@+id/gotomakani"
                             android:layout_marginStart="5dp">
                             <ImageView
-                                android:layout_width="42dp"
-                                android:layout_height="42dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:src="@drawable/makani_512"
                                 android:fontFamily="@font/dubai_font"
                                 android:padding="5dp"
