--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -13,10 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="125dp"
         android:id="@+id/cardHomeGrid"
-
         android:elevation="10dp"
         android:background="@drawable/grid_background_drawable"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         app:cardCornerRadius="16dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +25,7 @@
             android:layout_gravity="center_horizontal"
             android:weightSum="1"
             android:background="@drawable/grid_background_drawable"
-            android:layout_margin="5dp">
+            >
 
             <ImageView
                 android:id="@+id/imgMenuIcon"
@@ -35,8 +34,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginVertical="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.9"
+                android:layout_weight="0.8"
                 android:gravity="center_horizontal" />
             <TextView
                 style="@style/font_small_bold"
@@ -44,16 +42,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineHeight="20dp"
-                android:layout_weight="0.1"
+                android:layout_weight="0.2"
                 android:text='@{adapterGridMenuVM.getCurrentHomeGridMenuItems(position).nameEn ?? ""}'
-                android:maxLines="2"
+                android:maxLines="3"
                 android:lines="2"
                 android:textSize="14sp"
                 android:singleLine="false"
                 android:layout_marginTop="5dp"
                 android:textAlignment="center"
-                android:gravity="center_horizontal"/>
-            <TextView
+                android:gravity="center"/>
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txtAppId"
                 android:layout_below="@+id/imgMenuIcon"
                 android:layout_width="wrap_content"
