--- a/app/src/main/res/layout/adapter_map_function_menu.xml
+++ b/app/src/main/res/layout/adapter_map_function_menu.xml
@@ -13,7 +13,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="110dp"
         android:elevation="10dp"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
@@ -27,13 +27,12 @@
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/bookmark"
                 android:layout_weight="0.6"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginVertical="10dp"/>
+
+                android:layout_marginVertical="2dp"/>
             <TextView
                 android:id="@+id/txtFunctionNAme"
                 android:layout_below="@+id/imgMenuIcon"
@@ -42,9 +41,10 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dubai_font"
                 android:maxLines="2"
+                android:layout_weight=".4"
+                android:lineHeight="20dp"
                 android:textAlignment="center"
-                android:textColor="@color/black"
-                android:layout_alignParentBottom="true"/>
+                android:textColor="@color/black" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 <!--
