--- a/app/src/main/res/layout/fragment_contactus.xml
+++ b/app/src/main/res/layout/fragment_contactus.xml
@@ -68,8 +68,9 @@
                     <LinearLayout
                         android:id="@+id/layout1"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:minHeight="100dp"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
@@ -181,8 +182,9 @@
                     <LinearLayout
                         android:id="@+id/layout2"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:minHeight="100dp"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
@@ -220,6 +222,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/Website"
+
                                     android:id="@+id/TVDMWebsite"
                                     android:textColor="@color/black" />
 
@@ -329,7 +332,8 @@
                     <LinearLayout
                         android:id="@+id/layout3"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="100dp"
                         android:layout_gravity="center"
                         android:orientation="horizontal"
                         android:weightSum="2">
