--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layoutDirection="locale"
+        android:background="@color/white"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp">
 
