--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -36,13 +36,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:elevation="20dp"
             android:layoutDirection="locale"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="48dp"
                 android:id="@+id/toolBarLayout"
                 android:layout_marginHorizontal="5dp"
                 android:background="@color/white"
@@ -52,7 +54,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginVertical="10dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
@@ -65,7 +66,10 @@
                         android:layout_marginLeft="8dp"
                         app:srcCompat="@drawable/ic_arrow" />
 
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
 
                         <dm.sime.com.kharetati.view.customview.CleanableEditText
                             android:id="@+id/txtPlotNo"
@@ -76,6 +80,7 @@
                             android:hint="-  -  -  -  -  -  -"
                             android:maxLength="20"
                             android:textSize="16sp" />
+
                     <!--android:imeOptions="actionDone"
                     android:inputType="text"-->
                    <!-- android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
@@ -84,11 +89,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginVertical="10dp"
                     android:layout_weight=".75"
+
                     android:orientation="horizontal"
                     android:weightSum="6">
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgSearch"
                         android:layout_width="32dp"
@@ -96,7 +104,10 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/search_512" />
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgLayer"
                         android:layout_width="32dp"
@@ -104,7 +115,10 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/layers_512" />
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgBookmark"
                         android:layout_width="32dp"
@@ -113,7 +127,10 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/add_512" />
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgRecenter"
                         android:layout_width="32dp"
@@ -122,7 +139,10 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/location_512" />
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgMakani"
                         android:layout_width="30dp"
@@ -130,7 +150,10 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/makani_512" />
-
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray"/>
                     <ImageView
                         android:id="@+id/imgHelp"
                         android:layout_width="24dp"
@@ -163,8 +186,8 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
             app:fabCustomSize="48dp"
             android:id="@+id/floatingButtton"
             app:srcCompat="@drawable/menu_512"
@@ -172,25 +195,45 @@
             app:maxImageSize="32dp"
             android:foregroundGravity="center"
             app:backgroundTint="@color/white"
-            android:layout_marginBottom="150dp"
+            android:layout_marginBottom="54dp"
             android:layout_gravity="bottom|end"/>
         <FrameLayout
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:visibility="gone"
+
+            android:elevation="5dp"
+            android:background="@drawable/circular_menu_bg"
+            android:id="@+id/closefloatingButtton"
+            android:layout_marginBottom="190dp"
+            android:layout_gravity="bottom|end">
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:padding="6dp"
+                android:src="@drawable/close_512"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+        <LinearLayout
             android:id="@+id/mapFunctionLayout"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="214dp"
             android:background="@color/white"
             android:layout_marginTop="16dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="0dp"
-            android:elevation="20dp"
             android:visibility="gone"
             android:layoutDirection="locale"
             app:layout_constraintTop_toTopOf="parent">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleMapFunction"
                 android:layout_width="match_parent"
+                android:layout_marginTop="48dp"
+                android:layout_marginBottom="20dp"
                 android:layout_height="wrap_content"/>
-        </FrameLayout>
+        </LinearLayout>
         <include  layout="@layout/bottomsheet_web_view" />
 
         <androidx.core.widget.NestedScrollView
