--- a/app/src/main/res/layout/fragment_mymap.xml
+++ b/app/src/main/res/layout/fragment_mymap.xml
@@ -8,16 +8,20 @@
     </data>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="64dp"
                 android:weightSum="3"
                 android:layout_marginStart="8dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:background="@color/white"
                 android:orientation="horizontal"
                 android:gravity="center_vertical|start">
                 <LinearLayout
@@ -85,7 +89,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1.05"
                     android:gravity="end|center_vertical"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
@@ -172,6 +176,7 @@
                 android:fontFamily="@font/dubai_font"
                 android:textSize="20dp"
                 android:textAlignment="center"
+                android:background="@color/white"
                 android:textColor="@color/black"
                 android:visibility="visible"
                 android:layout_marginHorizontal="10dp"
