--- a/app/src/main/res/values-ar/dimens.xml
+++ b/app/src/main/res/values-ar/dimens.xml
@@ -2,5 +2,8 @@
   <!-- Default screen margins, per the Android Design guidelines. -->
 
     <dimen name="edit_drawable_height">24dp</dimen>
+  <dimen name="settngs_switch_margin" >64dp</dimen>
+  <dimen name="settings_language_margin">55dp</dimen>
+  <dimen name="settings_talkback_margin">0dp</dimen>
 
 </resources>
