--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,8 @@
   <dimen name="splash_logo_margin_bottom" >24dp</dimen>
   <dimen name="splash_logo_margin_right" >16dp</dimen>
   <dimen name="settngs_switch_margin" >90dp</dimen>
+  <dimen name="txtSize">14sp</dimen>
+  <dimen name="settings_language_margin">0dp</dimen>
+  <dimen name="settings_talkback_margin">0dp</dimen>
+
 </resources>
